--- a/projetologin/src/app/pages/intro/intro.page.html
+++ b/projetologin/src/app/pages/intro/intro.page.html
@@ -1,9 +1,28 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>intro</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+	<ion-slides pager="true">
+		<!-- Slide 1 -->
+		<ion-slide>
+			<ion-text color="light">
+				<img
+					src="/src/assets/shapes.svg"
+				/>
+				<h1>Seja bem vindo!</h1>
+				<p>Este aplicativo é sobre...</p>
+				<ion-button (click)="next()" fill="outline" color="light">Próximo</ion-button>
+			</ion-text>
+		</ion-slide>
 
+		<!-- Slide 2 -->
+		<ion-slide>
+			<ion-text color="light">
+				<img
+					src="/src/assets/shapes.svg"
+				/>
+				<h1>Incluir slide!</h1>
+				<p>... Segundo slide!</p>
+				<ion-button (click)="start()" fill="outline" color="light">Começar</ion-button>
+			</ion-text>
+		</ion-slide>
+	</ion-slides>
 </ion-content>
+
