--- a/projetologin/src/app/tab1/tab1.page.html
+++ b/projetologin/src/app/tab1/tab1.page.html
@@ -1,6 +1,8 @@
 <ion-header>
 	<ion-toolbar>
-		<ion-title> Tab 1 </ion-title>
+		<ion-title>
+			Home
+			 </ion-title>
 	</ion-toolbar>
 </ion-header>
 
@@ -49,30 +51,9 @@
 	</ion-card>
 	
 	
-	
+	<!-- eve.holt@reqres.in -->
 	
 </ion-content>
 
 	
 	
-	<div class="foooter">
-	<ion-footer>
-	  <ion-toolbar>
-		<ion-buttons slot="secondary">
-		  <ion-button (click)="home()">
-			<ion-icon slot="icon-only" name="home"></ion-icon>
-		  </ion-button>
-		  <ion-button (click)="atividade()">
-			<ion-icon slot="icon-only" name="reader"></ion-icon>
-		  </ion-button>
-		</ion-buttons>
-		<ion-buttons slot="primary">
-		  <ion-button (click)="perfil()">
-			<ion-icon slot="icon-only" name="person-circle"></ion-icon>
-		  </ion-button>
-		</ion-buttons>
-		<ion-title>Menu</ion-title>
-	  </ion-toolbar>
-	</ion-footer>
-	</div>
-
