--- a/projetologin/src/app/tab2/tab2.page.html
+++ b/projetologin/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Atividade
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,47 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="large">Atividade</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-card>
+    <img src="/assets/maps.PNG" />
+  </ion-card>
+
+      <ion-card>
+        <ion-card-header>
+            <ion-icon name="car"></ion-icon>
+            <ion-card-subtitle>Rua Fulano 12 12 de jan 12:00 - 12:50
+                R$20,20
+              </ion-card-subtitle>
+              <ion-icon name="caret-forward-outline"></ion-icon>
+        </ion-card-header>
+      
+
+      </ion-card>
+
+      <ion-card>
+        <ion-card-header>
+            <ion-icon name="car"></ion-icon>
+          <ion-card-subtitle>Rua Fulano 12 12 de jan 12:00 - 12:50
+            R$20,20
+          </ion-card-subtitle>
+          <ion-icon name="caret-forward-outline"></ion-icon>
+        </ion-card-header>
+      
+       
+      </ion-card>
+
+      <ion-card>
+        <ion-card-header>
+            <ion-icon name="car"></ion-icon>
+            <ion-card-subtitle>Rua Fulano 12 12 de jan 12:00 - 12:50
+                R$20,20
+              </ion-card-subtitle>
+              <ion-icon name="caret-forward-outline"></ion-icon>
+        </ion-card-header>
+      
+      </ion-card>
+
 </ion-content>
